# opengex

./: .gitignore  Cargo.toml  README.md
assets/: cube_colored_120.glslf  cube_colored_120.glslv  cube_colored_150.glslv  openddl-syntax.txt  opengex-syntax.txt
examples/: cube.rs
examples/assets/: cube_colored_150.glslf  opengex-syntax.txt
src/: lib.rs  scene.rs  structure.rs
src/io/: read.rs
src/io/read/: parsers.rs
tests/: test_syntax.rs
tests/assets/: opengex-syntax.txt
