[package]
name = "piston-opengex"
version = "0.2.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["opengex", "3D", "data", "model", "piston"]
description = "Meta rules for parsing the OpenGEX format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/opengex.git"
homepage = "https://github.com/pistondevelopers/opengex"

[lib]
name = "opengex"
path = "src/lib.rs"

[dependencies]
piston_meta = "0.13.0"

[dev-dependencies]
gfx = "*"
gfx_device_gl = "*"
piston_window = "0.18.0"
vecmath = "*"
camera_controllers = "0.7.0"
pistoncore-sdl2_window = "0.12.0"
piston_meta_search = "*"

