[package]
name = "piston-opengex"
version = "0.4.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["opengex", "3D", "data", "model", "piston"]
description = "Meta rules for parsing the OpenGEX format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/opengex.git"
homepage = "https://github.com/pistondevelopers/opengex"

[lib]
name = "opengex"
path = "src/lib.rs"

[dependencies]
piston_meta = "0.24.0"
nom = "1.0.0"
vec_map = "0.3"

[dev-dependencies]
gfx = "*"
gfx_device_gl = "*"
piston_window = "0.29.0"
vecmath = "*"
camera_controllers = "0.10.0"
pistoncore-sdl2_window = "0.19.0"
piston_meta_search = "0.11.0"
