[package]
name = "piston-opengex"
version = "0.6.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["opengex", "3D", "data", "model", "piston"]
description = "Meta rules for parsing the OpenGEX format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/opengex.git"
homepage = "https://github.com/pistondevelopers/opengex"

[lib]
name = "opengex"
path = "src/lib.rs"

[dependencies]
nom = "1.0.0"
vec_map = "0.3"

[dev-dependencies]
piston_meta = "0.25.1"
gfx = "0.9.0"
gfx_device_gl = "0.8.0"
piston_window = "0.35.0"
vecmath = "0.2.0"
camera_controllers = "0.10.0"
pistoncore-sdl2_window = "0.24.0"
piston_meta_search = "0.12.0"
shader_version = "0.2.1"
